Support binary Alipay certificate files